@@ -1,0 +1,16 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.beerslawlab;
+
+/**
+ * Strings related to sim-sharing.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class BLLSimSharing {
+
+    public static class Objects {
+        public static final String DROPPER = "dropper";
+        public static final String DROPPER_BUTTON = "dropperButton";
+        public static final String SHAKER = "shaker";
+    }
+}
