@@ -4,6 +4,8 @@ package edu.colorado.phet.beerslawlab.view;
 import java.awt.Image;
 
 import edu.colorado.phet.common.phetcommon.model.property.Property;
+import edu.colorado.phet.common.phetcommon.simsharing.SimSharingManager;
+import edu.colorado.phet.common.phetcommon.simsharing.SimSharingStrings.Actions;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.piccolophet.PiccoloPhetResources;
 import edu.umd.cs.piccolo.PNode;
@@ -17,6 +19,8 @@ import edu.umd.cs.piccolo.nodes.PImage;
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
 public class MomentaryButtonNode extends PNode {
+
+    private String simSharingObject = "MomentaryButtonNode";
 
     // Constructor that uses default images (round red buttons with 3D look)
     public MomentaryButtonNode( Property<Boolean> onProperty ) {
@@ -37,10 +41,12 @@ public class MomentaryButtonNode extends PNode {
 
         addInputEventListener( new PBasicInputEventHandler() {
             @Override public void mousePressed( PInputEvent event ) {
+                SimSharingManager.sendEvent( simSharingObject, Actions.PRESSED );
                 onProperty.set( true );
             }
 
             @Override public void mouseReleased( PInputEvent event ) {
+                SimSharingManager.sendEvent( simSharingObject, Actions.RELEASED );
                 onProperty.set( false );
             }
         } );
@@ -51,5 +57,9 @@ public class MomentaryButtonNode extends PNode {
                 offNode.setVisible( !onProperty.get() );
             }
         } );
+    }
+
+    public void setSimSharingObject( String simSharingObject ) {
+        this.simSharingObject = simSharingObject;
     }
 }
