@@ -1,3 +1,4 @@
+12/20/11 add some sim-sharing support
 12/20/11 add additional strings for 1st tab, for new features that were added
 12/20/11 add momentary button to dropper
 12/20/11 add dropper with dynamic label (no button yet)
